force-app/main/default/objects/Calendar_Content__c/Calendar_Content__c.object-meta.xml
<CustomObject>
    <label>Calendar Content</label>
    <nameField>
        <label>Calendar Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>