force-app/main/default/objects/Calendar_Content__c/fields/Calendar_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Type__c</fullName>
    <label>Calendar Type</label>
    <referenceTo>Calendar_Type__c</referenceTo>
    <relationshipLabel>Calendar Contents</relationshipLabel>
    <relationshipName>Calendar_Contents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>