force-app/main/default/objects/Calendar_Content__c/fields/Event_Description_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Description_Field__c</fullName>
    <label>Event Description Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>