force-app/main/default/objects/Calendar_Content__c/fields/Event_End_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Field__c</fullName>
    <description>Case 4740 Shared Calendar 08/2012: Indicates which field on the object represents the end date field for events</description>
    <label>Event End Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>