force-app/main/default/objects/Calendar_Content__c/fields/Event_Legend_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Legend_Field__c</fullName>
    <label>Event Legend Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>