force-app/main/default/objects/Calendar_Content__c/fields/Event_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Object_Name__c</fullName>
    <description>The name of the object used as base for this calendar</description>
    <label>Event Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>