force-app/main/default/objects/Calendar_Content__c/fields/Event_Title_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Title_Field__c</fullName>
    <description>Case 4740 Shared Calendar 08/2012: Indicates which field on the object represents the Title field for events</description>
    <label>Event Title Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>