force-app/main/default/objects/Calendar_Content__c/fields/Hierarchy_Classification_Field__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Classification_Field__c</fullName>
    <label>Hierarchy Classification Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>