force-app/main/default/objects/Calendar_Content__c/fields/Hierarchy_Object_External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Object_External_Id_Field__c</fullName>
    <label>Hierarchy Object External Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>