force-app/main/default/objects/Calendar_Content__c/fields/Hierarchy_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Object_Name__c</fullName>
    <label>Hierarchy Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>