force-app/main/default/objects/Calendar_Content__c/fields/Hierarchy_Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Relation_Field__c</fullName>
    <description>This field is used identify the hierarchy field to enable filter records for the client hierarchy / campagin hierarchy</description>
    <label>Hierarchy Relation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>