force-app/main/default/objects/Calendar_Content__c/fields/Legend_SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>Legend_SOQL_Query__c</fullName>
    <label>Legend SOQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>