force-app/main/default/objects/Calendar_Content__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Calendar_Type__c</columns>
    <columns>Event_Object_Name__c</columns>
    <columns>Event_Legend_Field__c</columns>
    <columns>Event_Title_Field__c</columns>
    <columns>Event_Start_Field__c</columns>
    <columns>Event_End_Field__c</columns>
    <columns>Event_Description_Field__c</columns>
    <columns>Hierarchy_Classification_Field__c</columns>
    <columns>Hierarchy_Object_Name__c</columns>
    <columns>Hierarchy_Relation_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>